--- a/ApProjectPhase1/pom.xml
+++ b/ApProjectPhase1/pom.xml
@@ -8,6 +8,16 @@
     <artifactId>ApProjectPhase1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!--  Gson: Java to JSON conversion -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
