--- a/ApProjectPhase1/pom.xml
+++ b/ApProjectPhase1/pom.xml
@@ -16,6 +16,12 @@
             <version>2.10.1</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
     </dependencies>
 
     <properties>
