--- a/ApProjectPhase1/pom.xml
+++ b/ApProjectPhase1/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>commons-codec</artifactId>
             <version>1.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
